--- a/.env.example
+++ b/.env.example
@@ -62,4 +62,7 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Static API key for auth on API routes
+API_KEY=your_api_key_here
+
 VITE_APP_NAME="${APP_NAME}"
