--- a/compose.yaml
+++ b/compose.yaml
@@ -1,16 +1,14 @@
 services:
   php:
     build:
-      context: .
+      context: ./.docker/php
       target: php-dev
     container_name: 'php'
     volumes:
-      - ./:/app
+      - ./app/:/app
       - ./.docker/php/php.ini:/usr/local/etc/php/php.ini
       - ./.docker/php/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
     working_dir: /app
-    networks:
-      - dmcrmnet
     environment:
       UID: 1000
       GID: 1000
@@ -25,11 +23,9 @@ services:
     ports:
       - '8000:80'
     volumes:
-      - ./:/app
-      - ./.docker/nginx.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - dmcrmnet
-###> doctrine/doctrine-bundle ###
+      - ./app/:/app
+      - ./.docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+
   postgres:
     image: postgres:${POSTGRES_VERSION:-16}-alpine
     environment:
@@ -45,8 +41,6 @@ services:
       - "5432:5432"
     volumes:
       - database_data:/var/lib/postgresql/data:rw
-    networks:
-      - dmcrmnet
 
   postgres_test:
     image: postgres:${POSTGRES_VERSION:-16}-alpine
@@ -59,17 +53,10 @@ services:
       timeout: 5s
       retries: 5
       start_period: 60s
-    networks:
-      - dmcrmnet
     tmpfs:
       - /var/lib/postgresql/data:rw
     ports:
       - "54321:5432"
-###< doctrine/doctrine-bundle ###
 
 volumes:
-###> doctrine/doctrine-bundle ###
   database_data:
-###< doctrine/doctrine-bundle ###
-networks:
-  dmcrmnet:
