--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,12 @@
 services:
   php:
     build:
-      context: ./.docker/php
+      context: .
+      dockerfile: ./.docker/php/Dockerfile
       target: php-dev
     container_name: 'php'
     volumes:
-      - ./app/:/app
+      - ./:/app
       - ./.docker/php/php.ini:/usr/local/etc/php/php.ini
       - ./.docker/php/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
     working_dir: /app
@@ -23,7 +24,7 @@ services:
     ports:
       - '8000:80'
     volumes:
-      - ./app/:/app
+      - ./:/app
       - ./.docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
 
   postgres:
