--- a/compose.yaml
+++ b/compose.yaml
@@ -1,15 +1,15 @@
+name: secunda
 services:
   php:
     build:
       context: .
       dockerfile: ./.docker/php/Dockerfile
       target: php-dev
-    container_name: 'php'
     volumes:
       - ./:/app
       - ./.docker/php/php.ini:/usr/local/etc/php/php.ini
       - ./.docker/php/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-    working_dir: /app
+    working_dir: /app/app
     environment:
       UID: 1000
       GID: 1000
@@ -19,10 +19,9 @@ services:
 
   nginx:
     image: nginx
-    container_name: 'nginx'
-    working_dir: /app
+    working_dir: /app/app
     ports:
-      - '8000:80'
+      - '${NGINX_PORT:-8081}:80'
     volumes:
       - ./:/app
       - ./.docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
@@ -39,7 +38,7 @@ services:
       retries: 5
       start_period: 60s
     ports:
-      - "5432:5432"
+      - "${DB_TEST_PORT:-54322}:5432"
     volumes:
       - database_data:/var/lib/postgresql/data:rw
 
@@ -57,7 +56,7 @@ services:
     tmpfs:
       - /var/lib/postgresql/data:rw
     ports:
-      - "54321:5432"
+      - "${DB_PORT:-54321}:5432"
 
 volumes:
   database_data:
