--- a/app/composer.json
+++ b/app/composer.json
@@ -10,6 +10,7 @@
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.6",
         "fakerphp/faker": "^1.23",
         "friendsofphp/php-cs-fixer": "^3.87",
         "laravel/pail": "^1.2.2",
